--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@sentry/nextjs": "^8.17.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.29",
+    "lucide-react": "^0.429.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "sharp": "^0.33.4",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.166.1",
     "three-globe": "^2.31.1"
